force-app/main/default/objects/Change_Request__c/fields/Old_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Street__c</fullName>
    <description>Old Billing Street</description>
    <label>Old Billing Street</label>
    <type>TextArea</type>
</CustomField>