force-app/main/default/objects/Change_Request__c/fields/Old_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Old_Contact_Email__c</fullName>
    <label>Old Contact Email</label>
    <type>Email</type>
</CustomField>