force-app/main/default/objects/Change_Request__c/fields/Old_Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Old_Contact_FirstName__c</fullName>
    <label>Old Contact FirstName</label>
    <type>TextArea</type>
</CustomField>