force-app/main/default/objects/Change_Request__c/fields/Old_Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Old_Contact_LastName__c</fullName>
    <label>Old Contact LastName</label>
    <type>TextArea</type>
</CustomField>