force-app/main/default/objects/Change_Request__c/fields/Old_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Old_Contact_Phone__c</fullName>
    <label>Old Contact Phone</label>
    <type>Phone</type>
</CustomField>