force-app/main/default/objects/Change_Request__c/fields/Old_Event_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Old_Event_Product_Type__c</fullName>
    <description>Old Event Product Type</description>
    <inlineHelpText>Old Event Product Type</inlineHelpText>
    <label>Old Event Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>