force-app/main/default/objects/Change_Request__c/fields/Old_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Old_Payment_Schedule__c</fullName>
    <description>Old Payment Schedule</description>
    <label>Old Payment Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>