force-app/main/default/objects/Change_Request__c/fields/Old_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_PO_Number__c</fullName>
    <label>Old PO Number</label>
    <type>TextArea</type>
</CustomField>