force-app/main/default/objects/Change_Request__c/fields/Old_Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Old_Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Amendments (Old Shipping Account)</relationshipLabel>
    <relationshipName>Amendments1</relationshipName>
    <type>Lookup</type>
</CustomField>