force-app/main/default/objects/Change_Request__c/fields/Old_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Old_Shipping_City__c</fullName>
    <label>Old Shipping City</label>
    <type>TextArea</type>
</CustomField>