force-app/main/default/objects/Change_Request__c/fields/Old_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Old_Shipping_Country__c</fullName>
    <label>Old Shipping Country</label>
    <type>TextArea</type>
</CustomField>