force-app/main/default/objects/Change_Request__c/fields/Old_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Shipping_Postal_Code__c</fullName>
    <label>Old Shipping Postal Code</label>
    <type>TextArea</type>
</CustomField>