force-app/main/default/objects/Change_Request__c/fields/Old_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Old_Shipping_State__c</fullName>
    <label>Old Shipping State</label>
    <type>TextArea</type>
</CustomField>