force-app/main/default/objects/Change_Request__c/fields/Old_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Old_Shipping_Street__c</fullName>
    <label>Old Shipping Street</label>
    <type>TextArea</type>
</CustomField>