force-app/main/default/objects/Change_Request__c/fields/Old_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Tax_ID__c</fullName>
    <label>Old Tax ID</label>
    <type>TextArea</type>
</CustomField>