force-app/main/default/objects/Change_Request__c/fields/Opportuntiy_Owner_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportuntiy_Owner_Email_Id__c</fullName>
    <description>Opportuntiy Owner Email Id</description>
    <label>Opportuntiy Owner Email Id</label>
    <type>Email</type>
</CustomField>