force-app/main/default/objects/Change_Request__c/fields/Order_IDs__c.field-meta.xml
<CustomField>
    <fullName>Order_IDs__c</fullName>
    <description>Order Ids in csv for which the amendments are requested</description>
    <label>Order IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>