force-app/main/default/objects/Change_Request__c/fields/Original_Booth_Total__c.field-meta.xml
<CustomField>
    <fullName>Original_Booth_Total__c</fullName>
    <description>Current Booth Total Cost</description>
    <label>Current Booth Total Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>