force-app/main/default/objects/Change_Request__c/fields/Original_Content__c.field-meta.xml
<CustomField>
    <fullName>Original_Content__c</fullName>
    <description>Current Content</description>
    <label>Current Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>