force-app/main/default/objects/Change_Request__c/fields/Original_Date_Digital__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_Digital__c</fullName>
    <description>Current Digital Date</description>
    <label>Current Digital Date</label>
    <type>Date</type>
</CustomField>