force-app/main/default/objects/Change_Request__c/fields/Original_Date_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_Publishing__c</fullName>
    <description>Current Publishing Date</description>
    <label>Current Publishing Date</label>
    <type>Date</type>
</CustomField>