force-app/main/default/objects/Change_Request__c/fields/Original_Rate__c.field-meta.xml
<CustomField>
    <fullName>Original_Rate__c</fullName>
    <description>Original Booth Rate</description>
    <label>Current Booth Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>