force-app/main/default/objects/Change_Request__c/fields/Original_Rate_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Original_Rate_Sponsorship__c</fullName>
    <description>Current Sponsorship Rate</description>
    <label>Current Sponsorship Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>