force-app/main/default/objects/Change_Request__c/fields/Original_Size_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Original_Size_Publishing__c</fullName>
    <description>Current Publishing Size</description>
    <label>Current Publishing Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>