force-app/main/default/objects/Change_Request__c/fields/Original_Sponsorship_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Sponsorship_Type__c</fullName>
    <description>Current Sponsorship Product</description>
    <inlineHelpText>Original Sponsorship product</inlineHelpText>
    <label>Current Sponsorship Product</label>
    <type>TextArea</type>
</CustomField>