force-app/main/default/objects/Change_Request__c/fields/Original_Total_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Original_Total_Sponsorship__c</fullName>
    <description>Current Sponsorship Total Cost</description>
    <label>Current Sponsorship Total Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>