force-app/main/default/objects/Change_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
    <inlineHelpText>Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>