force-app/main/default/objects/Change_Request__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Amendment Type. Financial/ Non-Financial</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Change__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Non-Financial</fullName>
            </value>
            <value>
                <fullName>Booth</fullName>
                <isActive>false</isActive>
                <label>Booth</label>
            </value>
            <value>
                <fullName>Digital</fullName>
                <isActive>false</isActive>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Financial Change</fullName>
                <isActive>false</isActive>
                <label>Financial Change</label>
            </value>
            <value>
                <fullName>Non Product</fullName>
                <isActive>false</isActive>
                <label>Non Product</label>
            </value>
            <value>
                <fullName>Non-Financial Change</fullName>
                <isActive>false</isActive>
                <label>Non-Financial Change</label>
            </value>
            <value>
                <fullName>Opportunity Detail</fullName>
                <isActive>false</isActive>
                <label>Opportunity Detail</label>
            </value>
            <value>
                <fullName>Publishing</fullName>
                <isActive>false</isActive>
                <label>Publishing</label>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
                <isActive>false</isActive>
                <label>Sponsorship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>