force-app/main/default/objects/Change_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Email of the user that raised the Amendment in CRM</description>
    <label>Requested By</label>
    <type>Email</type>
</CustomField>