force-app/main/default/objects/Change_Request__c/fields/Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Comments__c</fullName>
    <description>Sales Comments</description>
    <label>Request Instruction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>