force-app/main/default/objects/Change_Request__c/fields/Sales_Operations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations_Comments__c</fullName>
    <description>Sales Operations Comments</description>
    <label>Request Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>