force-app/main/default/objects/Change_Request__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Current Booth Size</description>
    <label>Current Booth Size</label>
    <length>8</length>
    <type>Text</type>
</CustomField>