force-app/main/default/objects/Change_Request__c/fields/SSC_Notes__c.field-meta.xml
<CustomField>
    <fullName>SSC_Notes__c</fullName>
    <description>Notes from SSC Team.</description>
    <label>SSC Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>