force-app/main/default/objects/Change_Request__c/fields/Type_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Change__c</fullName>
    <description>Type of Amendment.</description>
    <label>ZZ_Type of Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill To Account Change</fullName>
                <label>Account - Bill To Account Change To Different Account</label>
            </value>
            <value>
                <fullName>Billing Address Change</fullName>
                <label>Account - Bill To Address Update Same Account</label>
            </value>
            <value>
                <fullName>Account Name Change</fullName>
                <label>Account - Name Update</label>
            </value>
            <value>
                <fullName>Ship To Account Change</fullName>
                <label>Account - Ship To Account Change To Different Account</label>
            </value>
            <value>
                <fullName>Shipping Address Change</fullName>
                <label>Account - Ship To Address Update Same Account</label>
            </value>
            <value>
                <fullName>Billing Schedule Change</fullName>
                <label>Billing Options Update</label>
            </value>
            <value>
                <fullName>Campaign Run Dates Change</fullName>
                <label>Campaign Run Dates Update</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Update Bill To Contact</fullName>
                <label>Contact - Bill To Contact Change To Different Contact</label>
            </value>
            <value>
                <fullName>Bill to Contact Details Change</fullName>
                <label>Contact - Bill To Contact Update Same Contact</label>
            </value>
            <value>
                <fullName>Number of Impressions Amendment</fullName>
            </value>
            <value>
                <fullName>PO number change</fullName>
                <label>PO Number Update</label>
            </value>
            <value>
                <fullName>Tax Exempt Rebill</fullName>
            </value>
            <value>
                <fullName>VAT Registration Number Change</fullName>
                <label>VAT Registration Number Update</label>
            </value>
            <value>
                <fullName>Account Address</fullName>
                <isActive>false</isActive>
                <label>Account Address</label>
            </value>
            <value>
                <fullName>Account Name</fullName>
                <isActive>false</isActive>
                <label>Account Name</label>
            </value>
            <value>
                <fullName>Billing Account</fullName>
                <isActive>false</isActive>
                <label>Billing Account</label>
            </value>
            <value>
                <fullName>Billing Address</fullName>
                <isActive>false</isActive>
                <label>Billing Address</label>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
                <isActive>false</isActive>
                <label>Billing Contact</label>
            </value>
            <value>
                <fullName>Billing Terms</fullName>
                <isActive>false</isActive>
                <label>Billing Terms</label>
            </value>
            <value>
                <fullName>Booth Change</fullName>
                <isActive>false</isActive>
                <label>Booth Change</label>
            </value>
            <value>
                <fullName>Change Sales Rep</fullName>
                <isActive>false</isActive>
                <label>Change Sales Rep</label>
            </value>
            <value>
                <fullName>Content</fullName>
                <isActive>false</isActive>
                <label>Content</label>
            </value>
            <value>
                <fullName>Currency</fullName>
                <isActive>false</isActive>
                <label>Currency</label>
            </value>
            <value>
                <fullName>Date Change</fullName>
                <isActive>false</isActive>
                <label>Date Change</label>
            </value>
            <value>
                <fullName>Downgrade</fullName>
                <isActive>false</isActive>
                <label>Downgrade</label>
            </value>
            <value>
                <fullName>Incorrect Account details with Tax impact Amendment</fullName>
                <isActive>false</isActive>
                <label>Incorrect Account details with Tax impact Amendment</label>
            </value>
            <value>
                <fullName>Incorrect Product Tax amendment</fullName>
                <isActive>false</isActive>
                <label>Incorrect Product Tax amendment</label>
            </value>
            <value>
                <fullName>Ordered Products</fullName>
                <isActive>false</isActive>
                <label>Ordered Products</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>