force-app/main/default/objects/Change_Request__c/validationRules/Can_Not_Approve.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Approve</fullName>
    <active>true</active>
    <description>Can Not Approve till Amended Opportunity is Closed won</description>
    <errorConditionFormula>AND( ISPICKVAL(Change_Request_Status__c, &apos;Approval Required&apos;) ,NOT(ISBLANK(Amended_Opportunity__c)), NOT(ISPICKVAL(Amended_Opportunity__r.StageName, &apos;Closed Won&apos;)))</errorConditionFormula>
    <errorMessage>Amended Opportunity is not Closed won</errorMessage>
</ValidationRule>