force-app/main/default/objects/Change_Request__c/validationRules/Comments_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_Field_Required</fullName>
    <active>true</active>
    <description>Comments field is required if Type of Change &apos;Other&apos; is chosen</description>
    <errorConditionFormula>AND(ISPICKVAL( Type_of_Change__c , &apos;Other&apos;), ISBLANK(Comments__c))</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Comments are required if Type of Change is Other</errorMessage>
</ValidationRule>