force-app/main/default/objects/Change_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Amendment_Type__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Change_Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>