force-app/main/default/objects/Change_Request__c/listViews/All_Amendments_not_Completed.listView-meta.xml
<ListView>
    <fullName>All_Amendments_not_Completed</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Edition__c</columns>
    <columns>Change_Request_Status__c</columns>
    <columns>Amendment_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Change_Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Amendments not Completed</label>
</ListView>